--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>s3</artifactId>
+            <version>2.25.19</version>
+        </dependency>
     </dependencies>
 
     <build>
