--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -6,16 +6,19 @@ server.port=8080
 #spring.datasource.url=jdbc:mysql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}
 #spring.datasource.username=${DATABASE_USER}
 #spring.datasource.password=${DATABASE_PASSWORD}
+
 ## Local db properties (MySQL)
-#spring.datasource.url=jdbc:mysql://localhost:3306/skill_mentor_dev
+#spring.datasource.url=jdbc:mysql://localhost:3306/test
 #spring.datasource.username=root
-#spring.datasource.password=root
+#spring.datasource.password=1234
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
 # Remote properties (supabase)
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 # Hibernate
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
