--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.application.name=skill-mentor-root
 server.servlet.context-path=/api/v1
 server.port=8080
 
+management.metrics.enable.process=false
+
 # Profile
 spring.profiles.active=prod
 project.images=images/
