Container-aware JDK

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=skill-mentor-root
 server.servlet.context-path=/api/v1
 server.port=8080
+management.metrics.enable.process=false
+management.metrics.enable.system=false
 
 # Profile
 spring.profiles.active=prod
