--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -7,7 +7,7 @@ server.port=8080
 #spring.datasource.username=${DATABASE_USER}
 #spring.datasource.password=${DATABASE_PASSWORD}
 
-## Local db properties (MySQL)
+# Local db properties (MySQL)
 #spring.datasource.url=jdbc:mysql://localhost:3306/test
 #spring.datasource.username=root
 #spring.datasource.password=1234
