--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ server.port=8080
 management.metrics.enable.process=false
 management.metrics.enable.system=false
 
+spring.data.redis.repositories.enabled=false
+
 # Profile
 spring.profiles.active=prod
 project.images=images/
